--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
 	<header>
-		<h1>Twimba</h1>
+		<img class="meower-pic" alt="cat licking paw" src="images/cat-silhouette.png" />
+		<h1>meower</h1>
 	</header>
 	<main>
 		<div class="tweet-input-area">
@@ -23,7 +24,7 @@
 				id="tweet-input" 
 				placeholder="What's happening?"></textarea>
 		</div>
-		<button id="tweet-btn">Tweet</button>
+		<button id="tweet-btn">Meow</button>
 		<div class="feed" id="feed"></div>
 	</main>
 	<script src="index.js" type="module"></script>
